--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.454.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^2.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
